[gd_scene load_steps=21 format=3 uid="uid://slkcdtbcptrs"]

[ext_resource type="Script" uid="uid://cftgg2refn6j6" path="res://scenes/project_manage_panel/project_manage_panel.gd" id="1_fg41p"]
[ext_resource type="Script" uid="uid://domh3j7r0ah0v" path="res://addons/handy_nodes/nodes/scroll_dragger.gd" id="1_mv0x6"]
[ext_resource type="Shader" uid="uid://wj26732oqv13" path="res://assets/shader/blur.gdshader" id="1_pmkn4"]
[ext_resource type="Script" uid="uid://0syxcf2838lg" path="res://addons/handy_nodes/trigger_reactor/trigger.gd" id="2_3lrbc"]
[ext_resource type="Script" uid="uid://djjcpadwhefev" path="res://addons/handy_nodes/nodes/container_agent.gd" id="2_fg41p"]
[ext_resource type="Texture2D" uid="uid://du58b0jb165et" path="res://assets/icons/arrow_back_96dp_FFFFFF_FILL0_wght400_GRAD0_opsz48.svg" id="2_ktu8b"]
[ext_resource type="Script" uid="uid://bt6tds0lgyobf" path="res://addons/handy_nodes/trigger_reactor/reactor.gd" id="3_pmkn4"]
[ext_resource type="Script" uid="uid://bfif1mfm0s464" path="res://addons/handy_nodes/nodes/free_parent_when_start.gd" id="6_3a5jn"]
[ext_resource type="Texture2D" uid="uid://d2yo0rgxbk6qc" path="res://assets/icons/edit.svg" id="6_5vxcr"]
[ext_resource type="Texture2D" uid="uid://c7khapr3d5vgt" path="res://assets/icons/photo_plus.svg" id="6_idixx"]
[ext_resource type="PackedScene" uid="uid://bo4ekf0ypdo1f" path="res://scenes/project_manage_panel/card/card.tscn" id="6_ktu8b"]
[ext_resource type="Script" uid="uid://bsprgm68s2bo" path="res://addons/handy_nodes/mvc/view_adapter/button_view_adapter.gd" id="7_mtelp"]
[ext_resource type="Script" uid="uid://b34ad457xwvey" path="res://addons/handy_nodes/mvc/general_controller.gd" id="8_xps3l"]
[ext_resource type="Resource" uid="uid://mj2hbv42w62k" path="res://systems/ui_system/ui_model_data.tres" id="9_ng0cy"]
[ext_resource type="PackedScene" uid="uid://dlcwld5qjara0" path="res://scenes/project_manage_panel/new_project_panel/new_project_panel.tscn" id="10_5mg1j"]
[ext_resource type="Texture2D" uid="uid://0mnifv41s14o" path="res://assets/icons/add_96dp_FFFFFF_FILL0_wght400_GRAD0_opsz128.svg" id="14_xps3l"]
[ext_resource type="PackedScene" uid="uid://bas2i2dboymfs" path="res://scenes/project_manage_panel/image_export_panel/image_export_panel.tscn" id="16_ng0cy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5mg1j"]
shader = ExtResource("1_pmkn4")
shader_parameter/blur = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5mg1j"]
bg_color = Color(0.98, 0.957, 0.902, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ng0cy"]
bg_color = Color(0.98, 0.957, 0.902, 0.7)

[node name="ProjectManagePanel" type="PanelContainer"]
material = SubResource("ShaderMaterial_5mg1j")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_fg41p")

[node name="Trigger" type="Node" parent="."]
script = ExtResource("2_3lrbc")
trigger_type = 8
metadata/_custom_type_script = "uid://0syxcf2838lg"

[node name="Reactor" type="Node" parent="Trigger"]
script = ExtResource("3_pmkn4")
fn_name = "ready_blur"
fn_args = [0.2, 0.0]
metadata/_custom_type_script = "uid://bt6tds0lgyobf"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 2
color = Color(0.98, 0.957, 0.902, 0.4)

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 96
theme_override_constants/margin_bottom = 32

[node name="Trigger" type="Node" parent="MarginContainer"]
script = ExtResource("2_3lrbc")
trigger_type = 8
metadata/_custom_type_script = "uid://0syxcf2838lg"

[node name="Reactor" type="Node" parent="MarginContainer/Trigger"]
script = ExtResource("3_pmkn4")
fn_name = "move_from"
fn_args = [0.2, Vector2(0, -200), Vector2(0, 0)]
metadata/_custom_type_script = "uid://bt6tds0lgyobf"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="GobackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 144)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"base_button"
icon = ExtResource("2_ktu8b")
icon_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"label_title"
text = "HandyPixel"

[node name="ImportButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"base_button"
theme_override_constants/icon_max_width = 48
toggle_mode = true
icon = ExtResource("6_idixx")
icon_alignment = 1

[node name="EditButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"base_button"
theme_override_constants/icon_max_width = 48
toggle_mode = true
icon = ExtResource("6_5vxcr")
icon_alignment = 1

[node name="ButtonViewAdapter" type="Node" parent="MarginContainer/VBoxContainer/HBoxContainer/EditButton"]
script = ExtResource("7_mtelp")
type = 1
metadata/value = Color(0, 0, 0, 1)

[node name="GeneralController" type="Node" parent="MarginContainer/VBoxContainer/HBoxContainer/EditButton/ButtonViewAdapter"]
script = ExtResource("8_xps3l")
model = ExtResource("9_ng0cy")
prop_name = "projects_edit_state"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ScrollDragger" type="Node" parent="MarginContainer/VBoxContainer/ScrollContainer"]
script = ExtResource("1_mv0x6")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ContainerAgent" type="Node" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer" node_paths=PackedStringArray("container")]
unique_name_in_owner = true
script = ExtResource("2_fg41p")
container = NodePath("../HFlowContainer")

[node name="HFlowContainer" type="HFlowContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 48
theme_override_constants/v_separation = 48
alignment = 1
last_wrap_alignment = 1

[node name="Card" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/HFlowContainer" instance=ExtResource("6_ktu8b")]
layout_mode = 2

[node name="FPWS" type="Node" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/HFlowContainer/Card"]
script = ExtResource("6_3a5jn")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/HFlowContainer/Card"]
self_modulate = Color(0.196078, 0.192157, 0.176471, 1)
layout_mode = 2
texture = ExtResource("14_xps3l")
stretch_mode = 3

[node name="NewProjectPanel" parent="." instance=ExtResource("10_5mg1j")]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5mg1j")

[node name="ImageExportPanel" parent="." instance=ExtResource("16_ng0cy")]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ng0cy")
